# crawler

./: .gitignore  README.md  TelegramCrawler.py  VKCrawler.py  WebCrawler.py  main.py  pyproject.toml
src/: URLSaver.py  WebCrawler.py
tests/: test_webcrawler.py
