[project]
name = "crawler"
version = "0.1.0"
description = "Web crawler"
authors = [
    {name = "Amir",email = "st087783@student.spbu.ru"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "requests>=2.28.0",          # для HTTP-запросов
    "beautifulsoup4>=4.11.0",    # для BeautifulSoup (парсинг HTML)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",               # для тестирования
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
