[tool.poetry]
name = "Web crawler"
version = "0.1.0"
description = "Web crawler"
authors = ["agalikeev <st087783@student.spbu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-httpserver = "^1.1.3"
requests-mock = "^1.12.1"
